# password-generator

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/password_gen/: generator.py
tests/: test_generator.py
